--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [project]
 name = "graph_rag_data_pipeline_1"
+description = "Add your description here"
+version = "0.1.1"
 requires-python = ">=3.13"
-version = "0.1.0"
 dependencies = [
     "dagster==1.12.8",  # Data pipeline orchestrator
     "polars",  # Data manipulator
