--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,10 @@ dependencies = [
     "neo4j",  # Neo4j graph database driver
     "dagster_gcp",  # Dagster integration with GCP  # MusicBrainz API client
     "curl-cffi>=0.14.0",  #
-    "sentence_transformers"  #
+    "sentence_transformers",  #
+    "igraph",
+    "leidenalg",
+    "mlx-lm",
 ]
 
 [dependency-groups]
